2010-08-15  Robert Larice
 * src/spicelib/devices/asrc/asrcset.c ,
 * src/spicelib/devices/ccvs/ccvsset.c ,
 * src/spicelib/devices/vcvs/vcvsset.c ,
 * src/spicelib/devices/vsrc/vsrcset.c :
    check for shorted voltage sources, to avoid a segmentation fault

2010-08-15  Robert Larice
 * src/maths/sparse/spdefs.h :
    fix txfree() prototype

2010-08-13  Holger Vogt
 * autogen.sh: keep configure.in untouched by generating temporary 
   configure.ac if --adms is selected
 * configure.in: remove VLAMKF; move AM_CONDITIONAL out of 
   conditional clauses; replace AC_PROG_YACC, AC_PROG_LEX by
   appropriate AC_CHECK_PROGS with warning if BISON is missing w/o XSPICE,
   but fail if w/ XSPICE and BISON or FLEX missing; AC_CONFIG_MACRO_DIR([m4])
   added
 * Makefile.am: ACLOCAL_AMFLAGS = -I m4	 added 
 * .cvsignore: m4 added
 * nghelp.c: adapt function types

2010-08-11  Robert Larice
 * src/include/cktdefs.h ,
 * src/include/ifsim.h ,
 * src/include/inpdefs.h ,
 * src/include/noisedef.h ,
 * src/spicelib/analysis/ckt.h ,
 * src/spicelib/analysis/cktasknq.c ,
 * src/spicelib/analysis/cktdltn.c ,
 * src/spicelib/analysis/cktfnode.c ,
 * src/spicelib/analysis/cktgrnd.c ,
 * src/spicelib/analysis/cktmapn.c ,
 * src/spicelib/analysis/cktmkcur.c ,
 * src/spicelib/analysis/cktmkvol.c ,
 * src/spicelib/analysis/cktneweq.c ,
 * src/spicelib/analysis/cktnewn.c ,
 * src/spicelib/analysis/cktsetnp.c ,
 * src/spicelib/analysis/noisean.c ,
 * src/spicelib/analysis/pzaskq.c ,
 * src/spicelib/analysis/pzsetp.c ,
 * src/spicelib/analysis/senssetp.c ,
 * src/spicelib/analysis/tfsetp.c ,
 * src/spicelib/devices/asrc/asrcconv.c ,
 * src/spicelib/devices/asrc/asrcload.c ,
 * src/spicelib/devices/asrc/asrcpzld.c ,
 * src/spicelib/devices/asrc/asrcset.c ,
 * src/spicelib/devices/cktbindnode.c ,
 * src/spicelib/devices/ndev/ndevdefs.h ,
 * src/spicelib/devices/ndev/ndevset.c ,
 * src/spicelib/devices/urc/urcsetup.c ,
 * src/spicelib/parser/ifnewuid.c ,
 * src/spicelib/parser/inp.h ,