@@ -272,19 +272,19 @@ INP2M (CKTcircuit *ckt, INPtables * tab, card * current)
       switch (nodeflag)
 	{
 	case 0:
-	  ((GENinstance *) fast)->GENnode5 = -1;
-	  ((GENinstance *) fast)->GENnode6 = -1;
-	  ((GENinstance *) fast)->GENnode7 = -1;
+	  fast->GENnode5 = -1;
+	  fast->GENnode6 = -1;
+	  fast->GENnode7 = -1;
 	  break;
 	case 1:
 	  IFC (bindNode, (ckt, fast, 5, node5))
-	    ((GENinstance *) fast)->GENnode6 = -1;
-	  ((GENinstance *) fast)->GENnode7 = -1;
+	  fast->GENnode6 = -1;
+	  fast->GENnode7 = -1;
 	  break;
 	case 2:
 	  IFC (bindNode, (ckt, fast, 5, node5))
 	    IFC (bindNode, (ckt, fast, 6, node6))
-	    ((GENinstance *) fast)->GENnode7 = -1;
+	  fast->GENnode7 = -1;
 	  break;
 	case 3:
 	  IFC (bindNode, (ckt, fast, 5, node5))
